# Enginy

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start_dev.py
Enginy/: app.py  database.py  engine_config.py  forms.py  models.py  repositories.py
Enginy/engine_parts/: combustor.py  compressor.py  engine_part.py  engine_thermo.py  gas_management.py  inlet.py  turbine.py
Enginy/isa/: isa.py
Enginy/static/css/: styles.css
Enginy/static/js/: app.js
Enginy/templates/: analyze.html  base.html  create_part.html  index.html
Enginy/tests/: test_isa.py
Enginy/tests/test_engine_parts/: test_inlet.py
Enginy/utils/: constants.py
enginy/: app.py  database.py  engine_config.py  forms.py  models.py  repositories.py
enginy/engine_parts/: combustor.py  compressor.py  engine_part.py  engine_thermo.py  gas_management.py  inlet.py  turbine.py
enginy/isa/: isa.py
enginy/templates/: base.html
requirements/: base.txt
tests/: test_isa.py
tests/test_engine_parts/: test_inlet.py
