[tool.poetry]
name = "Enginy"
version = "1.0.0"
description = "Flask-based Web Application for Jet Engine Thermodynamic Calculations"
authors = ["Patryk Niczke <kyrtap1301@gmail.com>"]
readme = "README.md"
packages = [{include = "enginy"}]

[tool.poetry.dependencies]
python = "^3.11" 
flask = "^3.1.1"
wtforms = "^3.2.1"
flask-wtf = "^1.2.2"
numpy = ">=2.0.2"
cantera = ">=3.0.1"
plotly = "^6.0.0"
pymongo = "^4.11.2"
flask-pymongo = "^3.0.1"
types-flask = "^1.1.6"
types-wtforms = "^3.2.1.20250401"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
poethepoet = "^0.33.1"
ruff = "^0.11.2"
mypy = "^1.15.0"

[tool.poe.tasks]
ruff-check = "ruff check ."
format = "ruff format ."
mypy = "mypy ."

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "cantera.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "plotly.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pymongo.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "flask_wtf.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    
    "F",   
    "B",    
    "I",    
    "N",    
    "UP",   
    "PL",   
    "C90",  
    "SIM",  
    "PERF", 
]

exclude = [
    ".git",
    "__pycache__",
    "venv",
    ".venv",
]

ignore = [
    "PLR0913", 
    "E501",    
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
